api-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-api
  template:
    metadata:
      labels:
        app: my-api
    spec:
      containers:
      - name: myapp
        image: antonlarichev/conv-api:1.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
        volumeMounts:
          - name: api-value
            mountPath: /opt/app/uploads
      volumes:
        - name: api-value
          persistentVolumeClaim:
            claimName: api-pvc
