api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-api-service
spec:
  type: ClusterIP
  selector:
    app: my-api
  ports:
  - port: 3000
    protocol: TCP
