app-service.yml
apiVersion: v1 
kind: Service
metadata:
  name: app-conv-clusterip
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
  selector: 
    components: frontend
