service-rmq.yml
apiVersion: v1
kind: Service 
metadata:
  name: service-rmq
spec:
  type: ClusterIP
  ports:
    - name: amqp
      port: 5672
    - name: management
      port: 15672
      protocol: TCP
  selector:
    app: myapp
